--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,106 @@
-p {
-  color: cadetblue;
+/* basic style */
+html {
+  font-size: 100%;
+  line-height: 1.5rem;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+  height: 100%;
+}
+
+body {
+  margin: 0 auto;
+  padding: 0;
+  min-height: 100%;
+  max-width: 100%;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+/* hero styles */
+.hero-box {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+  grid-gap: 0px;
+  align-content: center;
+  justify-content: center;
+  align-items: start;
+  height: 100%;
+  width: 100%;
+}
+
+.hero-image-box {
+  height: 100vh;
+  width: 100%;
+  display: grid;
+  grid-column: 1 / -1;
+  grid-row: 1 / -1;
+}
+
+.hero-image-box::after {
+  content: "";
+  background-color: rgba(0, 0, 0, 0.4);
+  height: 100vh;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.hero-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.hero-text-box {
+  grid-column: 1 / -1;
+  grid-row: 1 / -1;
+  align-self: center;
+  text-align: center;
+  padding: 1rem;
+  z-index: 10;
+}
+.hero-heading {
+  font-size: 2rem;
+  line-height: 2rem;
+  letter-spacing: 0.05rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: azure;
+}
+.hero-text {
+  font-size: 1rem;
+  margin-top: 0.5rem;
+  color: azure;
+}
+/* add media queries for large screens */
+
+@media (min-width: 600px) {
+  .hero-heading {
+    font-size: 1rem;
+    line-height: 1rem;
+  }
+  .hero-text {
+    font-size: 1rem;
+    line-height: 1rem;
+  }
+  .hero-text-box {
+    padding: 1rem;
+  }
+}
+@media (min-width: 920px) {
+  .hero-heading {
+    font-size: 2rem;
+    line-height: 2rem;
+  }
 }
