--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,12 @@ html {
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
   height: 100%;
+  scroll-behavior: smooth;
+}
+@media (prefers-reduced-motion) {
+  html {
+    scroll-behavior: initial;
+  }
 }
 
 body {
@@ -61,6 +67,7 @@ img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  overflow: hidden;
 }
 .hero-text-box {
   grid-column: 1 / -1;
@@ -83,24 +90,92 @@ img {
   margin-top: 0.5rem;
   color: azure;
 }
+
+.hero-button {
+  display: inline-block;
+  padding: 0.75rem 2rem;
+  background: none;
+  color: azure;
+  font-size: 1.2rem;
+  font-weight: bold;
+  border: 1px solid white;
+  border-radius: 5px;
+  margin-top: 2rem;
+}
+.hero-button:hover {
+  background: rgba(0, 0, 0, 0.3);
+}
+
+.hero-button:active {
+  transform: scale(0.95);
+}
+
+/* Portfolio Gallery Styles */
+.portfolio-container {
+  margin: 1rem auto 0 auto;
+}
+
+.portfolio-container h1 {
+  font-size: 2rem;
+  line-height: 2rem;
+}
+
+.portfolio-gallery {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 0.5rem;
+  grid-auto-rows: 300px;
+}
+.gallery-item {
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+}
+.gallery-img {
+  height: 100%;
+  object-fit: cover;
+  transition: 0.5s ease-in-out;
+}
+.gallery-img:hover {
+  transform: scale(1.5);
+}
 /* add media queries for large screens */
 
 @media (min-width: 600px) {
   .hero-heading {
-    font-size: 1rem;
-    line-height: 1rem;
+    font-size: 3rem;
+    line-height: 3rem;
   }
   .hero-text {
-    font-size: 1rem;
-    line-height: 1rem;
+    font-size: 3rem;
+    line-height: 3rem;
   }
   .hero-text-box {
-    padding: 1rem;
+    padding: 3rem;
+  }
+
+  .portfolio-container {
+    font-size: 3rem;
+    line-height: 3rem;
   }
 }
 @media (min-width: 920px) {
   .hero-heading {
-    font-size: 2rem;
-    line-height: 2rem;
+    font-size: 4rem;
+    line-height: 4rem;
+  }
+  .hero-text {
+    font-size: 4rem;
+    line-height: 4rem;
+  }
+  .hero-text-box {
+    padding: 4rem;
+  }
+  .portfolio-container {
+    max-width: 1400px;
+  }
+  .portfolio-container h1 {
+    font-size: 4rem;
+    line-height: 4rem;
   }
 }
