About section is created.

--- a/css/styles.css
+++ b/css/styles.css
@@ -69,6 +69,14 @@ img {
   object-fit: cover;
   overflow: hidden;
 }
+.hero-profile-img {
+  display: block;
+  margin: 0 auto;
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  object-fit: cover; /* Maintain the aspect ratio of the image */
+}
 .hero-text-box {
   grid-column: 1 / -1;
   grid-row: 1 / -1;
@@ -109,73 +117,97 @@ img {
 .hero-button:active {
   transform: scale(0.95);
 }
+/*About Styles */
 
-/* Portfolio Gallery Styles */
-.portfolio-container {
+.about-container {
+  display: grid;
+  grid-template-columns: 1fr;
   margin: 1rem auto 0 auto;
+  padding: 40px;
 }
-
-.portfolio-container h1 {
+.about-text {
+  margin: 0 auto;
+}
+.about-text h1 {
   font-size: 2rem;
   line-height: 2rem;
 }
-
-.portfolio-gallery {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  grid-gap: 0.5rem;
-  grid-auto-rows: 300px;
-}
-.gallery-item {
-  height: 100%;
-  width: 100%;
-  overflow: hidden;
-}
-.gallery-img {
+.about-image img {
   height: 100%;
   object-fit: cover;
-  transition: 0.5s ease-in-out;
 }
-.gallery-img:hover {
-  transform: scale(1.5);
+.about-social {
+  display: flex;
+  justify-content: start;
 }
+.about-social a {
+  color: black;
+  padding: 0 1rem 1rem 1rem;
+}
+
 /* add media queries for large screens */
 
 @media (min-width: 600px) {
   .hero-heading {
-    font-size: 3rem;
-    line-height: 3rem;
+    font-size: 2rem;
+    line-height: 2rem;
   }
   .hero-text {
-    font-size: 3rem;
-    line-height: 3rem;
+    font-size: 1.5rem;
+    line-height: 1.5rem;
   }
   .hero-text-box {
     padding: 3rem;
+  }
+  .hero-profile-img {
+    width: 200px;
+    height: 200px;
   }
 
   .portfolio-container {
     font-size: 3rem;
     line-height: 3rem;
   }
+  .about-container {
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 1rem;
+  }
+  .about-text h1 {
+    font-size: 3rem;
+    line-height: 3rem;
+  }
+  .about-text p {
+    font-size: 1.1rem;
+    line-height: 1.5rem;
+  }
 }
 @media (min-width: 920px) {
   .hero-heading {
-    font-size: 4rem;
-    line-height: 4rem;
+    font-size: 3rem;
+    line-height: 3rem;
   }
   .hero-text {
-    font-size: 4rem;
-    line-height: 4rem;
+    font-size: 2rem;
+    line-height: 2rem;
   }
   .hero-text-box {
     padding: 4rem;
   }
-  .portfolio-container {
+  .hero-profile-img {
+    width: 300px;
+    height: 300px;
+  }
+  .portfolio-container,
+  .about-container {
     max-width: 1400px;
   }
-  .portfolio-container h1 {
+  .portfolio-container h1,
+  .about-text h1 {
     font-size: 4rem;
     line-height: 4rem;
+  }
+  .about-text p {
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 }
