--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,85 @@ img {
   height: auto;
   display: block;
 }
-
+/* Nav Bar Styles */
+.nav-bar {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  line-height: 1rem;
+  overflow: hidden;
+  background-color: azure;
+  z-index: 100;
+}
+.logo,
+.nav-menu {
+  text-transform: uppercase;
+}
+.logo,
+.nav-item {
+  white-space: nowrap;
+}
+.nav-menu {
+  list-style: none;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+  line-height: 1.5rem;
+}
+.nav-item {
+  flex-grow: 1;
+  flex-shrink: 0;
+  flex-basis: 33.3%;
+  text-align: center;
+}
+.social-nav-item {
+  flex-grow: 1;
+  flex-shrink: 1;
+  flex-basis: 10%;
+  text-align: center;
+  padding: 0 0.2rem;
+}
+.logo a,
+.nav-menu a {
+  display: block;
+  text-decoration: none;
+  letter-spacing: 0.2rem;
+  padding: 0.8rem;
+  color: black;
+}
+.logo a {
+  font-weight: 700;
+  font-size: 0.1rem;
+}
+.nav-menu a {
+  font-weight: 400;
+  letter-spacing: 0.1rem;
+  border-bottom: 1px solid white;
+  transition: all ease 0.1s;
+}
+.nav-menu a:hover {
+  border-bottom: 1px solid black;
+}
+/* Top nav bar only */
+.top-nav {
+  background: none;
+  position: fixed;
+  top: 0;
+}
+.top-nav .logo a,
+.top-nav .nav-menu a {
+  color: white;
+}
+.top-nav .nav-menu a {
+  border-bottom: 1px solid rgba(0, 0, 0, 0);
+}
+.top-nav .nav-menu a:hover {
+  border-bottom: 1px solid #fff;
+}
 /* hero styles */
 
 .hero-box {
@@ -127,6 +205,7 @@ img {
   z-index: 100;
   display: none;
 }
+
 .navbar-visible {
   display: block;
 }
@@ -172,7 +251,26 @@ img {
   color: rgb(96, 147, 174);
   padding: 0 1rem 1rem 1rem;
 }
+/* Skills Styles */
+.skills-container h1 {
+  display: grid;
+  grid-template-columns: 1fr;
+  margin: 1rem auto 0 auto;
+  padding: 40px;
+  font-size: 2rem;
+  line-height: 2rem;
+}
+
 /* Education Styles */
+
+.edu-container h1 {
+  display: grid;
+  grid-template-columns: 1fr;
+  margin: 1rem auto 0 auto;
+  padding: 40px;
+  font-size: 2rem;
+  line-height: 2rem;
+}
 .edu-container .edu-timeline {
   position: relative;
   max-width: 1200px;
@@ -313,20 +411,33 @@ img {
   }
 
   .portfolio-container {
-    font-size: 3rem;
-    line-height: 3rem;
+    font-size: 2rem;
+    line-height: 2rem;
   }
   .about-container {
     grid-template-columns: 1fr 1fr;
     grid-gap: 1rem;
   }
   .about-text h1 {
-    font-size: 3rem;
-    line-height: 3rem;
+    font-size: 2rem;
+    line-height: 2rem;
   }
   .about-text p {
     font-size: 1.1rem;
     line-height: 1.5rem;
+  }
+  .edu-container {
+    font-size: 2rem;
+    line-height: 2rem;
+  }
+  .nav-bar {
+    line-height: 1.5rem;
+  }
+  .nav-menu {
+    padding: 0 1rem;
+  }
+  .nav-item {
+    flex: 1 1;
   }
 }
 @media (min-width: 920px) {
@@ -350,12 +461,25 @@ img {
     max-width: 1400px;
   }
   .portfolio-container h1,
-  .about-text h1 {
+  .about-text h1,
+  .edu-container h1 {
     font-size: 4rem;
     line-height: 4rem;
   }
   .about-text p {
     font-size: 1.5rem;
     line-height: 2rem;
+  }
+  .nav-bar {
+    justify-content: space-between;
+    padding: 2rem 0;
+    line-height: 1rem;
+  }
+  .nav-menu {
+    width: auto;
+    justify-self: end;
+  }
+  .top-nav {
+    width: 100%;
   }
 }
