--- a/css/styles.css
+++ b/css/styles.css
@@ -82,7 +82,7 @@ img {
   text-decoration: none;
   letter-spacing: 0.2rem;
   padding: 0.8rem;
-  color: black;
+  color: rgb(0, 0, 0);
 }
 .logo a {
   font-weight: 700;
@@ -221,7 +221,7 @@ img {
   position: fixed;
   top: 0;
   width: 100%;
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(92, 121, 145, 0.8);
   z-index: 100;
   display: none;
 }
@@ -249,6 +249,7 @@ img {
   grid-template-columns: 1fr;
   margin: 1rem auto 0 auto;
   padding: 40px;
+  font-family: "Jura", serif;
 }
 .about-text {
   margin: 0 auto;
@@ -280,9 +281,12 @@ img {
   padding: 40px;
   font-size: 2rem;
   line-height: 2rem;
+  font-family: "Jura", serif;
 }
 
 /* Education Styles */
+@import url("https://fonts.googleapis.com/css?family=Jura:400,500,600");
+@import url("https://fonts.googleapis.com/css?family=K2D:400,500,600");
 
 .edu-container h1 {
   display: grid;
@@ -291,94 +295,109 @@ img {
   padding: 40px;
   font-size: 2rem;
   line-height: 2rem;
+  font-family: "Jura", serif;
 }
-.edu-container .edu-timeline {
+.edu-container .timeline {
+  padding: 40px;
+}
+
+.edu-container .timeline-item {
+  padding: 40px;
+}
+
+.timeline {
+  width: 100%;
+  margin: auto;
+  max-width: 760px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  padding-bottom: 100px;
   position: relative;
-  max-width: 1200px;
-  margin: 0 auto;
 }
-.edu-container .edu-timeline::after {
-  content: "";
+.timeline:before {
   position: absolute;
-  width: 6px;
-  background: #020133;
-  top: 0;
-  bottom: 0;
   left: 50%;
-  margin-left: -3px;
-  z-index: -2;
-}
-.edu-container .container {
-  padding: 10px 40px;
-  position: relative;
-  background-color: inherit;
-  width: 50%;
-}
-.edu-container .container::after {
+  height: 100%;
+  width: 1px;
+  background-color: rgba(71, 68, 68, 0.2);
+  transition: 0.6s 1.5s;
   content: "";
-  position: absolute;
-  width: 25px;
-  height: 25px;
-  right: -17px;
-  background-color: rgb(255, 255, 255);
-  border: 4px solid rgb(96, 147, 174);
-  top: 15px;
-  border-radius: 50%;
-  z-index: 100;
 }
-.edu-container .left {
+
+.timeline-overlay {
+  width: 100%;
+  background-color: #2d2d2d;
+  height: 0;
+  position: fixed;
+  top: 0;
+  z-index: 5;
   left: 0;
 }
-.edu-container .right {
-  left: 50%;
+.timeline-subtitle {
+  font-size: 1.1em;
+  padding: 0 10px;
+  line-height: 1.4;
+  font-weight: normal;
+  margin-top: 8px;
+  font-family: "K2D";
+  color: #929292;
 }
-.edu-container .left::before {
-  content: " ";
-  height: 0;
+.timeline-headline {
+  color: #0d0d0d;
   position: absolute;
-  top: 22px;
-  width: 0;
-  z-index: 1;
-  right: 30px;
-  border: medium solid rgb(96, 147, 174);
-  border-width: 10px 0 10px 10px;
-  border-color: transparent transparent transparent rgb(96, 147, 174);
+  display: flex;
+  letter-spacing: 0.4px;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  left: 0;
+  width: 100%;
+  top: 100%;
+  font-size: calc(0.2vw + 10px);
+  padding: 20px 0 0 0;
 }
-.edu-container .right::before {
-  content: " ";
-  height: 0;
-  position: absolute;
-  top: 22px;
-  width: 0;
-  z-index: 1;
-  left: 30px;
-  border: medium solid rgb(96, 147, 174);
-  border-width: 10px 10px 10px 0;
-  border-color: transparent rgb(96, 147, 174) transparent transparent;
+.timeline-title {
+  font-family: "Jura", serif;
+  margin: 0;
+  font-weight: normal;
+  font-size: 1.4em;
+  color: #424141;
+  white-space: nowrap;
 }
-.edu-container .right::after {
-  left: -16px;
+.timeline-excerpt {
+  font-size: 1.1em;
+  padding: 0 10px;
+  line-height: 1.4;
+  font-weight: normal;
+  margin-top: 8px;
+  font-family: "K2D";
+  color: #929292;
 }
-.edu-container .content {
-  background-color: rgb(96, 147, 174);
+.timeline-item {
+  height: 30vh;
+  width: 45%;
   position: relative;
-  border-radius: 6px;
+  margin: 40px 0;
 }
-.edu-container .content .tag {
-  font-size: 1.3rem;
-  padding-top: 1.5rem;
-  padding-left: 1.5rem;
+.timeline-item:nth-child(even) {
+  align-self: flex-end;
 }
-.edu-container .content .desc {
-  margin-left: 1.5rem;
-  padding-bottom: 1rem;
+.timeline-photo {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  border-radius: 50%;
+  position: relative;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
 }
-.edu-container .content .desc h3 {
-  font-size: 1.5rem;
-  font-weight: 600;
-}
-.edu-container .content .desc p {
-  font-size: 1.2rem;
+
+.timeline-photo > img {
+  overflow: hidden;
+  -o-object-fit: cover;
+  object-fit: cover;
+  width: 100%;
+  height: 90%;
 }
 
 /* Portfolio Gallery Styles */
@@ -390,6 +409,7 @@ img {
 .portfolio-container h1 {
   font-size: 2rem;
   line-height: 2rem;
+  font-family: "Jura", serif;
 }
 
 .portfolio-gallery {
@@ -447,10 +467,6 @@ img {
     font-size: 1.1rem;
     line-height: 1.5rem;
   }
-  .edu-container {
-    font-size: 2rem;
-    line-height: 2rem;
-  }
   .nav-bar {
     justify-content: space-between;
     padding: 2rem 0;
@@ -463,6 +479,26 @@ img {
 
   .top-nav {
     width: 100%;
+  }
+  .edu-container .edu-timeline {
+    position: relative;
+    width: 660px;
+    margin: 0 auto;
+    margin-top: 20px;
+    padding: 1em 0;
+    list-style-type: none;
+  }
+  .direction-l {
+    position: relative;
+    width: 300px;
+    float: left;
+    text-align: right;
+  }
+
+  .direction-r {
+    position: relative;
+    width: 300px;
+    float: right;
   }
 }
 @media (min-width: 920px) {
@@ -487,7 +523,8 @@ img {
   }
   .portfolio-container h1,
   .about-text h1,
-  .edu-container h1 {
+  .edu-container h1,
+  .skills-container h1 {
     font-size: 4rem;
     line-height: 4rem;
   }
