--- a/css/styles.css
+++ b/css/styles.css
@@ -317,7 +317,7 @@ img {
 }
 
 .edu-container .timeline-item {
-  padding: 40px;
+  padding: 20px;
 }
 
 .timeline {
@@ -333,7 +333,7 @@ img {
 .timeline:before {
   position: absolute;
   left: 50%;
-  height: 100%;
+  height: 120%;
   width: 1px;
   background-color: rgba(71, 68, 68, 0.2);
   transition: 0.6s 1.5s;
@@ -385,39 +385,138 @@ img {
   padding: 0 10px;
   line-height: 1.4;
   font-weight: normal;
-  margin-top: 8px;
+  margin-top: 4px;
   font-family: "K2D";
   color: #929292;
 }
-.timeline-item {
-  height: 30vh;
+.study .timeline-item {
+  height: 20vh;
   width: 45%;
   position: relative;
-  margin: 40px 0;
+  margin: 1px 0;
 }
-.timeline-item:nth-child(even) {
+.study .timeline-item:nth-child(even) {
   align-self: flex-end;
 }
-.timeline-photo {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  border-radius: 50%;
+.work .timeline-item {
+  height: 20vh;
+  width: 45%;
   position: relative;
-  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+  margin: 1px 0;
+}
+.work .timeline-item:nth-child(even) {
+  align-self: flex-end;
+}
+.study {
+  display: contents;
+}
+.work {
+  display: none;
 }
 
-.timeline-photo > img {
-  overflow: hidden;
-  -o-object-fit: cover;
-  object-fit: cover;
-  width: 100%;
-  height: 90%;
+.hidden {
+  display: contents;
 }
 
+.wrap {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.switch {
+  min-width: 300px;
+  min-height: 60px;
+  font-family: "Jura", serif;
+  font-size: 15px;
+  text-transform: uppercase;
+  letter-spacing: 1.3px;
+  font-weight: 700;
+  color: #f3f3f8;
+  background: #8dafc4;
+  background: linear-gradient(
+    90deg,
+    rgb(187, 164, 170) 0%,
+    rgb(115, 141, 161) 100% /* rgb(227, 174, 189) 0%,
+    rgb(132, 178, 212)*/
+  );
+  border: none;
+  border-radius: 1000px;
+  box-shadow: 12px 12px 24px rgba(133, 154, 160, 0.64);
+  transition: all 0.3s ease-in-out 0s;
+  cursor: pointer;
+  outline: none;
+  position: relative;
+  padding: 10px;
+}
+
+.switch::before {
+  content: "";
+  border-radius: 1000px;
+  min-width: calc(300px + 12px);
+  min-height: calc(60px + 12px);
+  border: 6px solid #afc3cd;
+  box-shadow: 0 0 60px rgba(133, 154, 160, 0.64);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: all 0.3s ease-in-out 0s;
+}
+
+.switch:hover,
+.switch:focus {
+  color: #313133;
+  transform: translateY(-6px);
+}
+
+.switch:hover::before,
+.switch:focus::before {
+  opacity: 1;
+}
+
+.switch::after {
+  content: "";
+  width: 30px;
+  height: 30px;
+  border-radius: 100%;
+  border: 6px solid #afd6e8;
+  position: absolute;
+  z-index: -1;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  animation: ring 1.5s infinite;
+}
+
+.switch:hover::after,
+.switch:focus::after {
+  animation: none;
+  display: none;
+}
+
+@keyframes ring {
+  0% {
+    width: 30px;
+    height: 30px;
+    opacity: 1;
+  }
+  100% {
+    width: 300px;
+    height: 300px;
+    opacity: 0;
+  }
+}
+/* Skills Styles */
+.skills-container {
+  margin: 10rem auto 0 auto;
+  padding: 40px;
+}
 /* Portfolio Gallery Styles */
 .portfolio-container {
-  margin: 1rem auto 0 auto;
+  margin: 10rem auto 0 auto;
   padding: 40px;
 }
 
