--- a/css/styles.css
+++ b/css/styles.css
@@ -255,34 +255,25 @@ img {
   max-width: 600px;
 }
 .about-text {
-  margin: 0 auto;
+  text-align: center;
 }
 .about-text h1 {
   font-size: 1.5rem;
   line-height: 1.5rem;
   text-align: center;
-  color: #070707;
+  color: #474747;
+  font-family: "Jura", serif;
 }
 .about-image img {
   height: 100%;
   object-fit: cover;
   max-width: 100%;
 }
-.about-social {
-  display: flex;
-  justify-content: start;
-  align-content: center;
-  justify-content: center;
-  align-items: start;
-}
-.about-social a {
-  color: rgb(96, 147, 174);
-  padding: 0 1rem 1rem 1rem;
-}
 .about-circle {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
+  display: flex; /* Use flexbox to center content vertically and horizontally */
+  flex-direction: column; /* Stack the text in the center */
+  align-items: center; /* Center horizontally */
+  justify-content: center; /* Center vertically */
   width: 500px;
   height: 500px;
   border-radius: 50%;
@@ -298,7 +289,149 @@ img {
   line-height: 2rem;
   font-family: "Jura", serif;
 }
+.skills-container {
+  margin: 10rem auto 0 auto;
+  padding: 40px;
+  font-family: "Jura", serif;
+}
 
+.serviceBox {
+  text-align: center;
+}
+.serviceBox .service-icon {
+  display: inline-block;
+  width: 100px;
+  height: 100px;
+  line-height: 100px;
+  border-radius: 50%;
+  background: #8dafc4;
+  margin-bottom: 25px;
+  font-size: 40px;
+  color: #fff;
+  transition: all 0.5s ease 0s;
+}
+.serviceBox:hover .service-icon {
+  transform: scale(1.1);
+}
+.serviceBox .title {
+  display: block;
+  font-size: 20px;
+  font-weight: 700;
+  color: #471437;
+  text-transform: uppercase;
+  margin: 0 0 12px 0;
+  position: relative;
+}
+.serviceBox .title:before,
+.serviceBox .title:after {
+  content: "";
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  background: #8dafc4;
+  position: absolute;
+  top: 40%;
+  left: 40%;
+  opacity: 0;
+  transition: all 0.5s ease 0s;
+}
+.serviceBox .title:after {
+  left: auto;
+  right: 40%;
+}
+.serviceBox:hover .title:before {
+  opacity: 1;
+  left: 5%;
+}
+.serviceBox:hover .title:after {
+  opacity: 1;
+  right: 5%;
+}
+.serviceBox .description {
+  font-size: 15px;
+  letter-spacing: 1px;
+  line-height: 27px;
+  color: #6f6f6f;
+}
+.serviceBox .icons {
+  display: block;
+  text-align: center;
+}
+
+.serviceBox .icons i {
+  display: block;
+  font-size: 40px;
+  margin: 10px auto;
+}
+
+@-webkit-keyframes load {
+  0% {
+    stroke-dashoffset: 0;
+  }
+}
+@keyframes load {
+  0% {
+    stroke-dashoffset: 0;
+  }
+}
+.serviceBox .progress {
+  position: relative;
+  display: inline-block;
+  padding: 0;
+  text-align: center;
+  display: none;
+}
+.serviceBox .progress > li {
+  display: inline-block;
+  position: relative;
+  text-align: center;
+  color: #93a2ac;
+  font-family: Lato;
+  font-weight: 100;
+  margin: 2rem;
+}
+.serviceBox .progress > li:before {
+  content: attr(data-name);
+  position: absolute;
+  width: 100%;
+  bottom: -2rem;
+  font-weight: 400;
+}
+.serviceBox .progress > li:after {
+  content: attr(data-percent);
+  position: absolute;
+  width: 100%;
+  top: 3.7rem;
+  left: 0;
+  font-size: 2rem;
+  text-align: center;
+}
+.serviceBox .progress svg {
+  width: 10rem;
+  height: 10rem;
+}
+.serviceBox .progress svg:nth-child(2) {
+  position: absolute;
+  left: 0;
+  top: 0;
+  transform: rotate(-90deg);
+}
+.serviceBox .progress svg:nth-child(2) path {
+  fill: none;
+  stroke-width: 25;
+  stroke-dasharray: 629;
+  stroke: #fff;
+  opacity: 0.9;
+  -webkit-animation: load 10s;
+  animation: load 10s;
+}
+
+.serviceBox .description {
+  display: none;
+}
+.serviceBox.active .description {
+  display: block;
+}
 /* Education Styles */
 @import url("https://fonts.googleapis.com/css?family=Jura:400,500,600");
 @import url("https://fonts.googleapis.com/css?family=K2D:400,500,600");
@@ -509,150 +642,7 @@ img {
     opacity: 0;
   }
 }
-/* Skills Styles */
-.skills-container {
-  margin: 10rem auto 0 auto;
-  padding: 40px;
-  font-family: "Jura", serif;
-}
 
-.serviceBox {
-  text-align: center;
-}
-.serviceBox .service-icon {
-  display: inline-block;
-  width: 100px;
-  height: 100px;
-  line-height: 100px;
-  border-radius: 50%;
-  background: #8dafc4;
-  margin-bottom: 25px;
-  font-size: 40px;
-  color: #fff;
-  transition: all 0.5s ease 0s;
-}
-.serviceBox:hover .service-icon {
-  transform: scale(1.1);
-}
-.serviceBox .title {
-  display: block;
-  font-size: 20px;
-  font-weight: 700;
-  color: #471437;
-  text-transform: uppercase;
-  margin: 0 0 12px 0;
-  position: relative;
-}
-.serviceBox .title:before,
-.serviceBox .title:after {
-  content: "";
-  width: 5px;
-  height: 5px;
-  border-radius: 50%;
-  background: #8dafc4;
-  position: absolute;
-  top: 40%;
-  left: 40%;
-  opacity: 0;
-  transition: all 0.5s ease 0s;
-}
-.serviceBox .title:after {
-  left: auto;
-  right: 40%;
-}
-.serviceBox:hover .title:before {
-  opacity: 1;
-  left: 5%;
-}
-.serviceBox:hover .title:after {
-  opacity: 1;
-  right: 5%;
-}
-.serviceBox .description {
-  font-size: 15px;
-  letter-spacing: 1px;
-  line-height: 27px;
-  color: #6f6f6f;
-}
-.serviceBox .icons {
-  display: block;
-  text-align: center;
-}
-
-.serviceBox .icons i {
-  display: block;
-  font-size: 40px;
-  margin: 10px auto;
-}
-
-@-webkit-keyframes load {
-  0% {
-    stroke-dashoffset: 0;
-  }
-}
-@keyframes load {
-  0% {
-    stroke-dashoffset: 0;
-  }
-}
-.serviceBox .progress {
-  position: relative;
-  display: inline-block;
-  padding: 0;
-  text-align: center;
-  display: none;
-}
-.serviceBox .progress > li {
-  display: inline-block;
-  position: relative;
-  text-align: center;
-  color: #93a2ac;
-  font-family: Lato;
-  font-weight: 100;
-  margin: 2rem;
-}
-.serviceBox .progress > li:before {
-  content: attr(data-name);
-  position: absolute;
-  width: 100%;
-  bottom: -2rem;
-  font-weight: 400;
-}
-.serviceBox .progress > li:after {
-  content: attr(data-percent);
-  position: absolute;
-  width: 100%;
-  top: 3.7rem;
-  left: 0;
-  font-size: 2rem;
-  text-align: center;
-}
-.serviceBox .progress svg {
-  width: 10rem;
-  height: 10rem;
-}
-.serviceBox .progress svg:nth-child(2) {
-  position: absolute;
-  left: 0;
-  top: 0;
-  transform: rotate(-90deg);
-}
-.serviceBox .progress svg:nth-child(2) path {
-  fill: none;
-  stroke-width: 25;
-  stroke-dasharray: 629;
-  stroke: #fff;
-  opacity: 0.9;
-  -webkit-animation: load 10s;
-  animation: load 10s;
-}
-
-.serviceBox .description {
-  display: none;
-}
-.serviceBox.active .description {
-  display: block;
-}
 /* Portfolio Gallery Styles */
 .portfolio-container {
   margin: 10rem auto 0 auto;
@@ -672,9 +662,8 @@ img {
 .portfolio-container h2 {
   font-size: 2rem;
   line-height: 2rem;
-  font-family: "Jura", serif;
   color: #445962;
-  font-family: "Copperplate", serif;
+  font-family: cursive, serif;
 }
 .port-description {
   font-size: 1rem;
